--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -10,3 +10,16 @@
 @import 'modules/manifest';
 @import 'states/manifest';
 @import 'shame';
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.5);
+}
