--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <div class="ml-5 cursor-pointer" (click)="scrollToView('about')">About</div>
       <div class="ml-5 cursor-pointer" (click)="scrollToView('skills')">Skills</div>
       <div class="ml-5 cursor-pointer" (click)="scrollToView('works')">Work</div>
+      <div class="ml-5 cursor-pointer" (click)="scrollToView('experience')">Experience</div>
       <div class="ml-5 cursor-pointer" [routerLink]="['/','projects']">Project</div>
     </div>
     <div class="spacer"></div>
