--- a/src/app/modules/portfol/components/port/port.component.html
+++ b/src/app/modules/portfol/components/port/port.component.html
@@ -6,26 +6,41 @@
     </div>
 </div>
 <div id="about" class="grid items-center wrap">
-    <div class="flex flex-col items-center text-black dark:text-white">
-        <div class="">
-            <p>I am a full-stack software engineer with a background in computer engineering.</p>
+    <div class="flex flex-col  text-black dark:text-white">
+        <div class="flex justify-center">
+            <h1 class="mb-6 text-center">About Me</h1>
         </div>
-        <div class="flex flex-row gap-6 mt-6">
-            <div class="flex flex-col">
-                <div class="flex justify-center font-bold text-2xl">4+</div>
-                <div class="flex text-gray-500">Years Experience</div>
+        <div class="flex flex-col mx-0 md:mx-80">
+            <div class="flex flex-col justify-center text-2xl">
+                <p>I am a full-stack software engineer with a background in computer engineering. I started my journey
+                    in the world of the web back in my university days and since then I am hooked on it.</p>
+                <br>
+                <p>I strive to create applications that provide an intuitive user experience backed by robust and
+                    efficiently functioning code. I have had the privilege of working at US-based companies and during
+                    that period I gained extensive knowledge and years of experience, working in cutting edge web
+                    technologies while delivering quality products and services.</p>
             </div>
-            <div class="flex flex-col">
-                <div class="flex justify-center font-bold text-2xl">5+</div>
-                <div class="flex text-gray-500 ">Project Completed</div>
+            <div class="flex flex-row justify-center gap-6 mt-6">
+                <div class="flex flex-col">
+                    <div class="flex justify-center font-bold text-3xl">4+</div>
+                    <div class="flex text-gray-500">Years Experience</div>
+                </div>
+                <div class="flex flex-col">
+                    <div class="flex justify-center font-bold text-3xl">5+</div>
+                    <div class="flex text-gray-500 ">Project Completed</div>
+                </div>
+            </div>
+            <div class="">
+                <button class="btn btn-violet" (click)="downloadResume()">Download My Resume</button>
             </div>
         </div>
     </div>
+
 </div>
 
 <div id="skills" class="grid items-center wrap">
     <div class="flex flex-col  text-black dark:text-white">
-        <h1 class="text-center text-4xl">My Skills</h1>
+        <h1 class="text-center text-4xl">My Technical Level</h1>
         <div class="mx-1 md:mx-72 mt-4">
             <h2 class="text-3xl">
                 <img class="cursor-pointer inline-block" width="34" alt="Alien" src="assets/icons/code.svg" />
@@ -56,7 +71,8 @@
             </div>
             <h2 class="text-3xl">
                 <img class="cursor-pointer inline-block" width="34" alt="Alien" src="assets/icons/atom.svg" />
-                Technologies</h2>
+                Technologies
+            </h2>
             <div class="flex mb-5 mt-4 gap-4">
                 <div class="tag">Azure</div>
                 <div class="tag">REST API</div>
@@ -66,25 +82,61 @@
 </div>
 
 <div id="works" class="grid items-center wrap">
-    <div class="flex flex-wrap justify-center gap-4 mx-0 md:mx-64 text-black dark:text-white">
-        <ng-container *ngFor="let work of works">
-            <div
-                class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+    <div class="flex flex-col">
+        <div class="text-white my-5">
+            <h1 class="text-center text-4xl">Things I've Built</h1>
+        </div>
 
-                <img class="rounded-t-lg" [src]="work.image" alt="">
+        <div class="flex flex-wrap justify-center gap-4 mx-0 md:mx-64 text-black dark:text-white">
+            <ng-container *ngFor="let work of works">
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <img class="rounded-t-lg" [src]="work.image" alt="">
+                    <div class="p-5">
+                        <a>
+                            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                                {{work.title}}</h5>
+                        </a>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{work.description}}</p>
+                        <div class="flex flex-row flex-wrap text-xs gap-2">
+                            <div class="tag" style="font-size: 11px;" *ngFor="let tag of work.tags">{{tag}}</div>
+                        </div>
+                    </div>
+                </div>
+            </ng-container>
 
-                <div class="p-5">
-                    <a>
-                        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                            {{work.title}}</h5>
-                    </a>
-                    <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{work.description}}</p>
-                    <div class="flex flex-row flex-wrap text-xs gap-2">
-                        <div class="tag" style="font-size: 11px;" *ngFor="let tag of work.tags">{{tag}}</div>
+        </div>
+    </div>
+</div>
+
+<div id="experience" class="grid items-center wrap">
+    <div class="flex flex-col  text-black dark:text-white">
+        <div class="flex justify-center">
+            <h1 class="mb-6 text-center">My Experience</h1>
+        </div>
+        <div class="flex flex-row mx-0 md:mx-64">
+            <div class="w-1/3">
+                <div class="mb-3 p-2 hovEff" *ngFor="let workExperience of workExperiences;let i = index"
+                    [ngClass]="selectedWorkExperience===i?'bg-gray-800 text-white':''" (click)="onSelectedWorkExperience(i)">
+                    <div class="font-bold text-2xl">{{workExperience.name}}</div>
+                    <div class="sec-designation">{{workExperience.designation}}</div>
+                    <div class="sec-year">{{workExperience.joinDate}} - {{workExperience.leaveDate}}</div>
+                </div>
+            </div>
+            <div class="w-2/3">
+                <div class="p-4">
+                    <em>Achievements, Tasks & Responsibilities</em>
+                    <div style="font-size: 1.2rem;">
+                        <ul>
+                            <li class="my-2"
+                                *ngFor="let list of workExperiences[selectedWorkExperience].responsibilities">
+                                <span><img class="cursor-pointer inline-block mr-5" width="14" alt="Alien"
+                                        src="assets/icons/caret-right.svg" /></span>{{list}}
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </ng-container>
-
+        </div>
     </div>
 </div>
