--- a/src/app/modules/portfol/components/port/port.component.html
+++ b/src/app/modules/portfol/components/port/port.component.html
@@ -1,5 +1,5 @@
 <div id="home" class="grid items-center wrap">
-    <div class="flex flex-col items-center text-black dark:text-white">
+    <div class="flex flex-col items-center text-black dark:text-white" data-aos="fade-in">
         <h2>Hi, I am</h2>
         <h1 class="text-6xl mt-3">Sumeet Maharjan</h1>
         <h2 class="text-2xl mt-3 text-gray-400 dark:text-gray-100">Full Stack Software Engineer</h2>
@@ -8,7 +8,7 @@
 <div id="about" class="grid items-center wrap">
     <div class="flex flex-col  text-black dark:text-white">
         <div class="flex justify-center">
-            <h1 class="mb-6 text-center">About Me</h1>
+            <h1 class="mb-6 text-center text-4xl">About Me</h1>
         </div>
         <div class="flex flex-col mx-0 md:mx-80">
             <div class="flex flex-col justify-center text-2xl">
@@ -23,11 +23,11 @@
             <div class="flex flex-row justify-center gap-6 mt-6">
                 <div class="flex flex-col">
                     <div class="flex justify-center font-bold text-3xl">4+</div>
-                    <div class="flex text-gray-500">Years Experience</div>
+                    <div class="flex text-gray-500 text-xl">Years Experience</div>
                 </div>
                 <div class="flex flex-col">
                     <div class="flex justify-center font-bold text-3xl">5+</div>
-                    <div class="flex text-gray-500 ">Project Completed</div>
+                    <div class="flex text-gray-500 text-xl">Project Completed</div>
                 </div>
             </div>
             <div class="">
@@ -39,74 +39,11 @@
 </div>
 
 <div id="skills" class="grid items-center wrap">
-    <div class="flex flex-col  text-black dark:text-white">
-        <h1 class="text-center text-4xl">My Technical Level</h1>
-        <div class="mx-1 md:mx-72 mt-4">
-            <h2 class="text-3xl">
-                <img class="cursor-pointer inline-block" width="34" alt="Alien" src="assets/icons/code.svg" />
-                Programming Languages
-            </h2>
-            <div class="flex mb-10 mt-4 gap-4">
-                <div class="tag">C#</div>
-                <div class="tag">TypeScript</div>
-                <div class="tag">HTML</div>
-                <div class="tag">SCSS/CSS</div>
-            </div>
-            <h2 class="text-3xl">
-                <img class="cursor-pointer inline-block" width="34" alt="Alien" src="assets/icons/browser.svg" />
-                Web Frameworks and Libraries
-            </h2>
-            <div class="flex mb-10 mt-4 gap-4">
-                <div class="tag">ASP.NET Core</div>
-                <div class="tag">Angular</div>
-                <div class="tag">React</div>
-            </div>
-            <h2 class="text-3xl">
-                <img class="cursor-pointer inline-block" width="25" alt="Alien" src="assets/icons/database.svg" />
-                Databases
-            </h2>
-            <div class="flex mb-10 mt-4 gap-4">
-                <div class="tag">SQL Server</div>
-                <div class="tag">MySQL</div>
-            </div>
-            <h2 class="text-3xl">
-                <img class="cursor-pointer inline-block" width="34" alt="Alien" src="assets/icons/atom.svg" />
-                Technologies
-            </h2>
-            <div class="flex mb-5 mt-4 gap-4">
-                <div class="tag">Azure</div>
-                <div class="tag">REST API</div>
-            </div>
-        </div>
-    </div>
+    <app-skills></app-skills>
 </div>
 
 <div id="works" class="grid items-center wrap">
-    <div class="flex flex-col">
-        <div class="text-white my-5">
-            <h1 class="text-center text-4xl">Things I've Built</h1>
-        </div>
-
-        <div class="flex flex-wrap justify-center gap-4 mx-0 md:mx-64 text-black dark:text-white">
-            <ng-container *ngFor="let work of works">
-                <div
-                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-                    <img class="rounded-t-lg" [src]="work.image" alt="">
-                    <div class="p-5">
-                        <a>
-                            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                                {{work.title}}</h5>
-                        </a>
-                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{work.description}}</p>
-                        <div class="flex flex-row flex-wrap text-xs gap-2">
-                            <div class="tag" style="font-size: 11px;" *ngFor="let tag of work.tags">{{tag}}</div>
-                        </div>
-                    </div>
-                </div>
-            </ng-container>
-
-        </div>
-    </div>
+    <app-work></app-work>
 </div>
 
 <div id="experience" class="grid items-center wrap">
@@ -117,7 +54,8 @@
         <div class="flex flex-row mx-0 md:mx-64">
             <div class="w-1/3">
                 <div class="mb-3 p-2 hovEff" *ngFor="let workExperience of workExperiences;let i = index"
-                    [ngClass]="selectedWorkExperience===i?'bg-gray-800 text-white':''" (click)="onSelectedWorkExperience(i)">
+                    [ngClass]="selectedWorkExperience===i?'bg-gray-800 text-white':''"
+                    (click)="onSelectedWorkExperience(i)">
                     <div class="font-bold text-2xl">{{workExperience.name}}</div>
                     <div class="sec-designation">{{workExperience.designation}}</div>
                     <div class="sec-year">{{workExperience.joinDate}} - {{workExperience.leaveDate}}</div>
@@ -130,7 +68,7 @@
                         <ul>
                             <li class="my-2"
                                 *ngFor="let list of workExperiences[selectedWorkExperience].responsibilities">
-                                <span><img class="cursor-pointer inline-block mr-5" width="14" alt="Alien"
+                                <span><img class="cursor-pointer inline-block mr-5" width="14"
                                         src="assets/icons/caret-right.svg" /></span>{{list}}
                             </li>
                         </ul>
